Thu Feb  4 10:53:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
        
          Fixed problems concerning correct retrievel of process list.

Thu Feb  3 09:57:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.inl:
          Added support for the GCC Atomic Builtins, if you want to
          use these, add ACE_HAS_GCC_ATOMIC_BUILTINS defined as 1 in
          your config file

        * ace/Reactor.cpp:
        * ace/Select_Reactor_Base.cpp:
          Layout changes

        * ace/Reactor.h:
          Doxygen change

Tue Feb  2 19:57:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/ProcessLVRT.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_VxWorks.pm:
        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/TestTarget_LVRT.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/Process_VMS.pm:

          Added killall methods to the Process and Target frameworks.
          Currently only full implementation on Win32 and *nix platforms
          (empty on others).

Tue Feb  2 19:52:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Updated link to Cell results

Mon Feb  1 23:16:24  2010  Steve Huston  <shuston@riverace.com>

        * ace/Acceptor.h: Fixed up doxygen for ACE_Oneshot_Acceptor.

Tue Jan 26 03:56:45 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Init_ACE.h: Updated the documentation of ACE::init() and
          ACE::fini() so it reflects what ACE actually does.  Thanks to
          Steve Huston, Andrew Kaplan <alexande dot kaplan at tafcorp dot
          com>, and Alexander Mintz <alexande dot mintz at tafcorp dot
          com> for motivating this update.

Mon Feb  1 17:35:08 UTC 2010  Chris Cleeland  <cleeland_c@local>

        * ace/Obstack_T.h: